--- a/public/header/default.html
+++ b/public/header/default.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <base href="http://localhost/MineSpiration/">
         <title>Minespiration</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <base href="http://localhost/MineSpiration/">
+        
         <link rel="stylesheet" href="public/css/mytheme.css" />
         <link rel="stylesheet" href="public/themes/jquery.mobile.icons.min.css" />
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        
         <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     </head>
     <body>
         <div data-role="page" id="home" data-theme="d">
             <header data-role="header">
                 <h1>Minespiration</h1>
-                <a href="post.html" rel="external" data-icon="grid" data-transition="slide">Post your own!</a>
+                <a href="post" rel="external" data-icon="grid" data-transition="slide">Post your own!</a>
             </header>
