login en homelinks werkend

--- a/public/body/login.html
+++ b/public/body/login.html
@@ -2,7 +2,14 @@
     <form id="loginform">
         <input name="n" type="text" placeholder="name">
         <input name="p" type="password" placeholder="password">
-        <input type="submit" value="log in">
+        <div class="ui-grid-a">
+            <div class="ui-block-a">
+                <input type="submit" value="log in">
+            </div>
+            <div class="ui-block-b">
+                <a data-role="button" href="#" class="ui-disabled">sign up</a>
+            </div>
+        </div>
     </form>
 </div> 
 <div data-role="popup" id="popupBasic">
