--- a/public/header/default.html
+++ b/public/header/default.html
@@ -2,16 +2,22 @@
 <html>
     <head>
         <title>Minespiration</title>
+        <base href="http://mine.sygnal.nl">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <base href="http://localhost/MineSpiration/">
-        
         <link rel="stylesheet" href="public/css/mytheme.css" />
-        <link rel="stylesheet" href="public/themes/jquery.mobile.icons.min.css" />
+        <!--link rel="stylesheet" href="public/themes/jquery.mobile.icons.min.css" /-->
         <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <script>
+            $( document ).on( "mobileinit", function() {
+                $.extend( $.mobile , {
+                    dynamicBaseEnabled: true
+                });
+            });
+        </script>
     </head>
     <body>
         <div data-role="page" id="home" data-theme="d">
