comments toegevoegd, andere achtergrond mooiere urls

--- a/public/body/home.html
+++ b/public/body/home.html
@@ -1,2 +1,2 @@
-<a data-transition="slide" href="login.html">login</a><br />
-<a data-transition="slide" href="logout.html">logout</a>
+<a data-transition="slide" href="login">login</a><br />
+<a data-transition="slide" href="logout">logout</a>
