--- a/public/body/login.html
+++ b/public/body/login.html
@@ -1,18 +1,17 @@
-<div>
-    <form id="loginform">
-        <input name="n" type="text" placeholder="name">
-        <input name="p" type="password" placeholder="password">
-        <div class="ui-grid-a">
-            <div class="ui-block-a">
-                <input type="submit" value="log in">
-            </div>
-            <div class="ui-block-b">
-                <a data-role="button" href="#" class="ui-disabled">sign up</a>
-            </div>
+<form id="loginform">
+    <input name="n" type="text" placeholder="name">
+    <input name="p" type="password" placeholder="password">
+    <div class="ui-grid-a">
+        <div class="ui-block-a">
+            <input type="submit" value="log in">
         </div>
-    </form>
-</div> 
+        <div class="ui-block-b">
+            <a data-role="button" href="#" class="ui-disabled">sign up</a>
+        </div>
+    </div>
+</form>
 <div data-role="popup" id="popupBasic">
   <p>Message</p>
 </div>
+<!-- Login en submit gebeurt in dit script -->
 <script src="public/js/login.js" type="text/javascript"></script>
