frontend registratie voltooid

--- a/public/body/login.html
+++ b/public/body/login.html
@@ -6,7 +6,7 @@
             <input type="submit" value="log in">
         </div>
         <div class="ui-block-b">
-            <a data-role="button" href="#" class="ui-disabled">sign up</a>
+            <a data-role="button" href="signup">sign up</a>
         </div>
     </div>
 </form>
