Git moet deze dingen commiten, anders mag ik niet pushen ofzo

--- a/public/body/signup.html
+++ b/public/body/signup.html
@@ -16,8 +16,8 @@
         <input required name="p2" id="p2" type="password" onkeyup="comparepass(this)" placeholder="My_d0G1E_c4rl">
     </div>
     <div data-role="fieldcontain">
-        <label for="a">date of birth</label>
-        <input name="a" id="a" type="date" placeholder="yyyy/mm/dd">
+        <label for="b">date of birth</label>
+        <input name="b" id="b" type="date" placeholder="yyyy/mm/dd">
     </div>
     <div data-role="fieldcontain">
         <label for="g">minecraft name</label>
